--- a/pipeline/buildspec_build_package.yml
+++ b/pipeline/buildspec_build_package.yml
@@ -11,6 +11,9 @@ phases:
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
   build:
     commands:
+      - ls -al
+      - cd hello-world-sam
+      - ls -al
       - sam build --use-container --template ${SAM_TEMPLATE}
       - . ./assume-role.sh ${TESTING_PIPELINE_EXECUTION_ROLE} test-package
       - sam package --s3-bucket ${TESTING_ARTIFACT_BUCKET}
