--- a/codepipeline.yaml
+++ b/codepipeline.yaml
@@ -38,7 +38,7 @@ Parameters:
     Default: "main"
   SamTemplate:
     Type: String
-    Default: "template.yaml"
+    Default: "hello-world-sam/template.yaml"
   TestingRegion:
     Type: String
     Default: "us-gov-east-1"
